--- a/AccountConfigSets/App_LocalResources/ManageAccountConfigSet.aspx.pt-br.resx
+++ b/AccountConfigSets/App_LocalResources/ManageAccountConfigSet.aspx.pt-br.resx
@@ -171,10 +171,10 @@
   <data name="USERNAME" xml:space="preserve">
     <value>User Name</value>
   </data>
-  <data name="dpSubParamsEndDateResource.Text" xml:space="preserve">
+  <data name="dpSubParamsEndDateResource.Label" xml:space="preserve">
     <value>Subscription End Date</value>
   </data>
-  <data name="dpSubParamsStartDateResource.Text" xml:space="preserve">
+  <data name="dpSubParamsStartDateResource.Label" xml:space="preserve">
     <value>Subscription Start Date</value>
   </data>
   <data name="tbSubParamsDescriptionResource.Label" xml:space="preserve">
@@ -217,13 +217,13 @@
     <value>Template Selection Criteria and Properties For Modification Parameters</value>
   </data>
   <data name="panelSubscriptionParametersResource.Text" xml:space="preserve">
-    <value>Template Subscription Parameters</value>
+    <value>Template Subscription Parameters Details</value>
   </data>
   <data name="tbGroupSubscriptionNameResource.Label" xml:space="preserve">
     <value>Group Subscription Name</value>
   </data>
   <data name="tbSubParamsId.Label" xml:space="preserve">
-    <value>Subscription Parameters Id</value>
+    <value>Subscription Params Id</value>
   </data>
   <data name="ACCOUNTVIEW" xml:space="preserve">
     <value>Account View</value>
@@ -237,7 +237,7 @@
   <data name="ITEM" xml:space="preserve">
     <value>Item</value>
   </data>
-    <data name="ITEMS" xml:space="preserve">
+  <data name="ITEMS" xml:space="preserve">
     <value>Items</value>
   </data>
   <data name="SELECTION_CRITERIA_GRID_TITLE" xml:space="preserve">
@@ -252,11 +252,14 @@
   <data name="EDIT_SELECTIONCRITERION" xml:space="preserve">
     <value>Edit Selection Criterion</value>
   </data>
-  <data name="ADD_PROPERTY_TO_SET" xml:space="preserve">
-    <value>Add Property To Set</value>
+  <data name="REMOVE_PROPERTY_TO_SET" xml:space="preserve">
+    <value>Remove Property To Set</value>
   </data>
   <data name="EDIT_PROPERTY_TO_SET" xml:space="preserve">
     <value>Edit Property To Set</value>
+  </data>
+  <data name="ADD_PROPERTY_TO_SET" xml:space="preserve">
+    <value>Add Property To Set</value>
   </data>
   <data name="ADD_SELECTION_CRITERIA" xml:space="preserve">
     <value>Add Selection Criteria</value>
@@ -266,5 +269,29 @@
   </data>
   <data name="EDIT_SELECTION_CRITERIA" xml:space="preserve">
     <value>Edit Selection Criteria</value>
+  </data>
+  <data name="UDRC_GRID_TITLE" xml:space="preserve">
+    <value>UDRC metrics</value>
+  </data>
+  <data name="TEXT_FAILED" xml:space="preserve">
+    <value>Failed. Wrong input!</value>
+  </data>
+  <data name="TEXT_WRONG_INPUT" xml:space="preserve">
+    <value>Most likely length of the value more than available for the selected property</value>
+  </data>
+  <data name="panelManageSubscriptionParametersResource.Text" xml:space="preserve">
+    <value>Manage Subscription Parameters For OnBoard Template</value>
+  </data>
+  <data name="btnSelectSubParamsResource.Text" xml:space="preserve">
+    <value>Select Subscription Params</value>
+  </data>
+  <data name="btnRemoveSubParamsResource.Text" xml:space="preserve">
+    <value>Remove Subscription Params</value>
+  </data>
+  <data name="SELECT_SUBPARAMS" xml:space="preserve">
+    <value>Select Subscription Parameters</value>
+  </data>
+  <data name="TEXT_UPDATE_QUESTION" xml:space="preserve">
+    <value>Are you sure?</value>
   </data>
 </root>
