FEAT-4559 As a MN user I'd like to have ability to view details of Account Configuration Sets in the system on UI Added display of PO Name tigeather with PO Id FEAT-4853 As a MN user I'd like to have ability to add Subscription Parameters to the new Account Configuration Sets in the system from UI Fixed wrong redirect after add Sub. params FEAT-4558 As a MN user I'd like to have ability to add new Account Configuration Sets in the system from UI Fixed error on case no Sub. Params was selected and Ok clicked

--- a/App_GlobalResources/MainMenu.resx
+++ b/App_GlobalResources/MainMenu.resx
@@ -691,6 +691,6 @@
     <value>Sub. Params For OnBoard Templates</value>
   </data>
   <data name="TEXT_CREATE_ACS_SUB_PARAMS" xml:space="preserve">
-    <value>Add Sub. Params</value>
+    <value>Add Subscription Parameters</value>
   </data>
 </root>
