--- a/AccountConfigSets/App_LocalResources/AccountConfigSetList.aspx.fr.resx
+++ b/AccountConfigSets/App_LocalResources/AccountConfigSetList.aspx.fr.resx
@@ -157,10 +157,10 @@
     <value>[FR]Edit</value>
   </data>
   <data name="MOVE_RANK_DOWN" xml:space="preserve">
-    <value>[FR][FR]Rank down</value>
+    <value>[FR]Rank down</value>
   </data>
   <data name="MOVE_RANK_UP" xml:space="preserve">
-    <value>[FR][FR]Rank up</value>
+    <value>[FR]Rank up</value>
   </data>
   <data name="PageResource1.Title" xml:space="preserve">
     <value>[FR]MetraNet - OnBoard Templates</value>
