--- a/AccountConfigSets/App_LocalResources/ManageSubscriptionParameters.aspx.es.resx
+++ b/AccountConfigSets/App_LocalResources/ManageSubscriptionParameters.aspx.es.resx
@@ -214,7 +214,7 @@
     <value>Value</value>
   </data>
   <data name="UDRC_GRID_TITLE" xml:space="preserve">
-    <value>UDRC Metrics For Pricable Items</value>
+    <value>UDRC Metrics For Priceable Items</value>
   </data>
   <data name="UDRC_PI_GRID_TITLE" xml:space="preserve">
     <value>UDRC Priсeable Items</value>
