CORE-8772:"Localized Approval screens: Unable to select line and no "Change details" displayed" 1. Escape apostrophe in generated JavaScript for ChangeTypeConfiguration; 2. Correct resource name from "TEXT_ACCOUNT_UPDATES" to "TEXT_ACCOUNT_UPDATE". Code Reviewer: YZapara
Conflicts:
	Source/MetraTech/UI/MetraNet/App_GlobalResources/JSConsts.fr.resx

--- a/App_GlobalResources/JSConsts.es.resx
+++ b/App_GlobalResources/JSConsts.es.resx
@@ -294,7 +294,7 @@
   <data name="TEXT_RATE_UPDATE" xml:space="preserve">
     <value>[ES]Rate Update</value>
   </data>
-  <data name="TEXT_ACCOUNT_UPDATES" xml:space="preserve">
+  <data name="TEXT_ACCOUNT_UPDATE" xml:space="preserve">
     <value>[ES]Account Updates</value>
   </data>
   <data name="TEXT_PRODUCT_OFFERING_UPDATE" xml:space="preserve">
