CORE-8804 FEAT-4558 add ACS from IU localization: Start and End dates captions are not localized
Fixed localization tags

Review by RPuzikov

--- a/AccountConfigSets/App_LocalResources/ManageAccountConfigSet.aspx.de.resx
+++ b/AccountConfigSets/App_LocalResources/ManageAccountConfigSet.aspx.de.resx
@@ -195,10 +195,10 @@
   <data name="btnAddAccountConfigSetResource.Text" xml:space="preserve">
     <value>Add</value>
   </data>
-  <data name="dpStartDateResource.Text" xml:space="preserve">
+  <data name="dpStartDateResource.Label" xml:space="preserve">
     <value>Template Effective Date</value>
   </data>
-  <data name="dpEndDateResource.Text" xml:space="preserve">
+  <data name="dpEndDateResource.Label" xml:space="preserve">
     <value>Template Effective End Date</value>
   </data>
   <data name="tbAcsDescriptionResource.Label" xml:space="preserve">
