--- a/AccountConfigSets/App_LocalResources/ManageAccountConfigSet.aspx.resx
+++ b/AccountConfigSets/App_LocalResources/ManageAccountConfigSet.aspx.resx
@@ -195,11 +195,11 @@
   <data name="btnAddAccountConfigSetResource.Text" xml:space="preserve">
     <value>Add</value>
   </data>
-  <data name="dpStartDateResource.Text" xml:space="preserve">
-    <value>Template Effective Date</value>
+  <data name="dpStartDateResource.Label" xml:space="preserve">
+    <value>Effective Date</value>
   </data>
-  <data name="dpEndDateResource.Text" xml:space="preserve">
-    <value>Template Effective End Date</value>
+  <data name="dpEndDateResource.Label" xml:space="preserve">
+    <value>Effective End Date</value>
   </data>
   <data name="tbAcsDescriptionResource.Label" xml:space="preserve">
     <value>Template Description</value>
