--- a/MetraControl/ScheduledAdapters/App_LocalResources/RunScheduledAdapter.aspx.en-GB.resx
+++ b/MetraControl/ScheduledAdapters/App_LocalResources/RunScheduledAdapter.aspx.en-GB.resx
@@ -117,7 +117,16 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="RunScheduledAdapterMTTitle.Text" xml:space="preserve">
-    <value>[EN-GB]Run Scheduled Adapters</value>
+  <data name="ADAPTERS_WERE_SUBMITTED" xml:space="preserve">
+    <value>Events with IDs {0} were submitted for execution</value>
+  </data>
+  <data name="ADAPTER_INSTANCE_START_DATE" xml:space="preserve">
+    <value>Start Date For New Instance</value>
+  </data>
+  <data name="RUN_ADAPTER_BUTTON_TEXT" xml:space="preserve">
+    <value>Run</value>
+  </data>
+  <data name="RUN_ADAPTER_TOOL_TIP" xml:space="preserve">
+    <value>Run Selected Adapters</value>
   </data>
 </root>
