--- a/MetraControl/ControlCenter/App_LocalResources/OperationsDashboard.aspx.pt-br.resx
+++ b/MetraControl/ControlCenter/App_LocalResources/OperationsDashboard.aspx.pt-br.resx
@@ -118,7 +118,7 @@
         <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
     </resheader>
     <data name="DATE_FORMAT_JS" xml:space="preserve">
-        <value>%m/%d/%Y %I:%M:%S %p</value>
+        <value>%d/%m/%Y %X</value>
     </data>
     <data name="lblBillCloseSynopisBillGroupsResource.Text" xml:space="preserve">
         <value>Grupo de contas:</value>
