--- a/App_LocalResources/ReportsAnalyticsDashboard.aspx.ja.resx
+++ b/App_LocalResources/ReportsAnalyticsDashboard.aspx.ja.resx
@@ -130,9 +130,21 @@
     <value>{JA}New Customers</value>
   </data>
   <data name="SELECT_CURRENCY" xml:space="preserve">
-    <value>{JA}Select Currency:</value>
+    <value>{JA}Select Currency</value>
   </data>
   <data name="TEXT_NO_DATA_AVAILABLE" xml:space="preserve">
     <value>{JA}No data found</value>
-  </data>  
+  </data>
+  <data name="TEXT_NEW_CUSTOMERS_LEGEND" xml:space="preserve">
+    <value>{JA}New Customers</value>
+  </data>
+  <data name="TEXT_BILLINGS_TOOLTIP" xml:space="preserve">
+    <value>{JA}Amount</value>
+  </data>
+  <data name="TEXT_MRR_TOOLTIP" xml:space="preserve">
+    <value>{JA}MRR</value>
+  </data>
+  <data name="TEXT_NEW_CUSTOMERS_TOOLTIP" xml:space="preserve">
+    <value>{JA}New Customers</value>
+  </data>
 </root>
