--- a/App_LocalResources/ReportsAnalyticsDashboard.aspx.pt-br.resx
+++ b/App_LocalResources/ReportsAnalyticsDashboard.aspx.pt-br.resx
@@ -130,9 +130,21 @@
     <value>{pt-BR}New Customers</value>
   </data>
   <data name="SELECT_CURRENCY" xml:space="preserve">
-    <value>{pt-BR}Select Currency:</value>
+    <value>{pt-BR}Select Currency</value>
   </data>
   <data name="TEXT_NO_DATA_AVAILABLE" xml:space="preserve">
     <value>{pt-BR}No data found</value>
+  </data>
+  <data name="TEXT_NEW_CUSTOMERS_LEGEND" xml:space="preserve">
+    <value>{pt-BR}New Customers</value>
+  </data>
+  <data name="TEXT_BILLINGS_TOOLTIP" xml:space="preserve">
+    <value>{pt-BR}Amount</value>
+  </data>
+  <data name="TEXT_MRR_TOOLTIP" xml:space="preserve">
+    <value>{pt-BR}MRR</value>
+  </data>
+  <data name="TEXT_NEW_CUSTOMERS_TOOLTIP" xml:space="preserve">
+    <value>{pt-BR}New Customers</value>
   </data>
 </root>
