--- a/MetraControl/ControlCenter/App_LocalResources/OperationsDashboard.aspx.ja.resx
+++ b/MetraControl/ControlCenter/App_LocalResources/OperationsDashboard.aspx.ja.resx
@@ -237,17 +237,11 @@
   <data name="TEXT_DURATION" xml:space="preserve">
     <value>[JA]Duration</value>
   </data>
-  <data name="TEXT_EARLIEST_ETA" xml:space="preserve">
-    <value>[JA]Earliest ETA:</value>
-  </data>
   <data name="TEXT_READY" xml:space="preserve">
     <value>[JA]Ready:</value>
   </data>
   <data name="TEXT_SUCCESSFUL" xml:space="preserve">
     <value>[JA]Successful:</value>
-  </data>
-  <data name="TEXT_VARIANCE" xml:space="preserve">
-    <value>[JA]Variance:</value>
   </data>
   <data name="TEXT_WAITING" xml:space="preserve">
     <value>[JA]Waiting:</value>
@@ -311,5 +305,17 @@
   </data>
   <data name="TEXT_TYPE_M5" xml:space="preserve">
     <value>{ja}M5</value>
-  </data>    
+  </data>
+  <data name="TEXT_EARLIEST_ETA" xml:space="preserve">
+    <value>{ja}Average run time of remaining {0} adapters is {1} hours (Earliest ETA: {2})</value>
+  </data>
+  <data name="TEXT_VARIANCE_FASTER_MESSAGE" xml:space="preserve">
+    <value>{ja}Adapters are running about {0} % faster compared to previous runs for this interval</value>
+  </data>
+  <data name="TEXT_VARIANCE_SAME_MESSAGE" xml:space="preserve">
+    <value>{ja}Adapters are running about the same compared to previous runs for this interval</value>
+  </data>
+  <data name="TEXT_VARIANCE_SLOWER_MESSAGE" xml:space="preserve">
+    <value>{ja}Adapters are running about {0} % slower compared to previous runs for this interval</value>
+  </data>
 </root>
