--- a/MetraControl/ControlCenter/App_LocalResources/OperationsDashboard.aspx.pt-br.resx
+++ b/MetraControl/ControlCenter/App_LocalResources/OperationsDashboard.aspx.pt-br.resx
@@ -210,9 +210,6 @@
     <data name="TEXT_DURATION" xml:space="preserve">
         <value>Duração</value>
     </data>
-    <data name="TEXT_EARLIEST_ETA" xml:space="preserve">
-        <value>Primeiro ETA:</value>
-    </data>
     <data name="TEXT_END" xml:space="preserve">
         <value>Término</value>
     </data>
@@ -291,9 +288,6 @@
     <data name="TEXT_UNGUIDED" xml:space="preserve">
         <value>Não guiado</value>
     </data>
-    <data name="TEXT_VARIANCE" xml:space="preserve">
-        <value>Variância:</value>
-    </data>
     <data name="TEXT_WAITING" xml:space="preserve">
         <value>Aguardando:</value>
     </data>
@@ -311,5 +305,17 @@
   </data>
   <data name="TEXT_TYPE_M5" xml:space="preserve">
     <value>{br}M5</value>
-  </data>      
+  </data>
+  <data name="TEXT_EARLIEST_ETA" xml:space="preserve">
+    <value>{pt-BR}Average run time of remaining {0} adapters is {1} hours (Earliest ETA: {2})</value>
+  </data>
+  <data name="TEXT_VARIANCE_FASTER_MESSAGE" xml:space="preserve">
+    <value>{pt-BR}Adapters are running about {0} % faster compared to previous runs for this interval</value>
+  </data>
+  <data name="TEXT_VARIANCE_SAME_MESSAGE" xml:space="preserve">
+    <value>{pt-BR}Adapters are running about the same compared to previous runs for this interval</value>
+  </data>
+  <data name="TEXT_VARIANCE_SLOWER_MESSAGE" xml:space="preserve">
+    <value>{pt-BR}Adapters are running about {0} % slower compared to previous runs for this interval</value>
+  </data>
 </root>
