--- a/App_GlobalResources/JSConsts.pt-br.resx
+++ b/App_GlobalResources/JSConsts.pt-br.resx
@@ -1308,7 +1308,7 @@
   <data name="TITLE_REMOVE_RELATIONSHIP" xml:space="preserve">
     <value>Remover relacionamento</value>
   </data>
-    <data name="TEXT_TERMINATE" xml:space="preserve">
+  <data name="TEXT_TERMINATE" xml:space="preserve">
     <value>Terminate</value>
   </data>
   <data name="TEXT_TERMINATE_SELECTED_ROWS" xml:space="preserve">
@@ -1340,5 +1340,11 @@
   </data>
   <data name="TEXT_MORE" xml:space="preserve">
     <value>[pt-BR]More ...</value>
+  </data>
+  <data name="FAILED_ADAPTERS_TEMPLATE" xml:space="preserve">
+    <value>[pt-BR]Adapter {tx_name}, instance id {id_instance} for run {id_run} has failed with the error {tx_detail}.</value>
+  </data>
+  <data name="DEMO_NOTIFICATION_EVENT_TEMPLATE" xml:space="preserve">
+    <value>[pt-BR]Demo event successfully generated on {currenttimestamp}.</value>
   </data>
 </root>
