--- a/config/Localization/UI/UI_gb.xml
+++ b/config/Localization/UI/UI_gb.xml
@@ -35,12 +35,20 @@
             <Value>Parenthesis</Value>
         </locale_entry>
         <locale_entry>
+            <Name>UI/NotificationEventType/Demo Notification Event</Name>
+            <Value>Demo Notification Event</Value>
+        </locale_entry>
+        <locale_entry>
             <Name>UI/NotificationEventType/Group Subscription End Date</Name>
             <Value>Group Subscription End Date</Value>
         </locale_entry>
         <locale_entry>
             <Name>UI/NotificationEventType/Subscription End Date</Name>
             <Value>Subscription End Date</Value>
+        </locale_entry>
+        <locale_entry>
+            <Name>UI/NotificationEvetnType/Demo Notification Event</Name>
+            <Value>Demo Notification Event</Value>
         </locale_entry>
         <locale_entry>
             <Name>UI/ReportType/Chart</Name>
