--- a/config/Localization/UI/ui_it.xml
+++ b/config/Localization/UI/ui_it.xml
@@ -35,12 +35,20 @@
             <Value>Parentesi</Value>
         </locale_entry>
         <locale_entry>
+            <Name>UI/NotificationEventType/Demo Notification Event</Name>
+            <Value>{it}Demo Notification Event</Value>
+        </locale_entry>
+        <locale_entry>
             <Name>UI/NotificationEventType/Group Subscription End Date</Name>
             <Value>{it} Group Subscription End Date</Value>
         </locale_entry>
         <locale_entry>
             <Name>UI/NotificationEventType/Subscription End Date</Name>
             <Value>{it} Subscription End Date</Value>
+        </locale_entry>
+        <locale_entry>
+            <Name>UI/NotificationEvetnType/Demo Notification Event</Name>
+            <Value>{it}Demo Notification Event</Value>
         </locale_entry>
         <locale_entry>
             <Name>UI/ReportType/Chart</Name>
