--- a/config/Localization/UI/UI_us.xml
+++ b/config/Localization/UI/UI_us.xml
@@ -39,6 +39,10 @@
             <Value>Demo Notification Event</Value>
         </locale_entry>
         <locale_entry>
+            <Name>UI/NotificationEventType/Failed Adapters</Name>
+            <Value>Failed Adapters</Value>
+        </locale_entry>
+        <locale_entry>
             <Name>UI/NotificationEventType/Group Subscription End Date</Name>
             <Value>Group Subscription End Date</Value>
         </locale_entry>
