--- a/config/Localization/UI/ui_es.xml
+++ b/config/Localization/UI/ui_es.xml
@@ -36,7 +36,11 @@
         </locale_entry>
         <locale_entry>
             <Name>UI/NotificationEventType/Demo Notification Event</Name>
-            <Value>{es}Demo Notification Event</Value>
+            <Value>evento de notificación de demostración</Value>
+        </locale_entry>
+        <locale_entry>
+            <Name>UI/NotificationEventType/Failed Adapters</Name>
+            <Value>Adaptadores Fallidos</Value>
         </locale_entry>
         <locale_entry>
             <Name>UI/NotificationEventType/Group Subscription End Date</Name>
