--- a/config/Localization/UI/ui_it.xml
+++ b/config/Localization/UI/ui_it.xml
@@ -36,7 +36,11 @@
         </locale_entry>
         <locale_entry>
             <Name>UI/NotificationEventType/Demo Notification Event</Name>
-            <Value>{it}Demo Notification Event</Value>
+            <Value>evento di notifica demo</Value>
+        </locale_entry>
+        <locale_entry>
+            <Name>UI/NotificationEventType/Failed Adapters</Name>
+            <Value>Adattatori Falliti</Value>
         </locale_entry>
         <locale_entry>
             <Name>UI/NotificationEventType/Group Subscription End Date</Name>
