FEAT-4989 Rewrite /MOM/default/dialog/ScheduledAdapter.List.asp by ASP.NET page with FilterGrid FEAT-5008  [DEV] Create ScheduledAdaptersInstanceList.aspx page
removed previous changes, because do not use Activity Service
minor corrections

--- a/MetraControl/ScheduledAdapters/App_LocalResources/ScheduledAdaptersInstanceList.aspx.en-GB.resx
+++ b/MetraControl/ScheduledAdapters/App_LocalResources/ScheduledAdaptersInstanceList.aspx.en-GB.resx
@@ -116,6 +116,9 @@
     <data name="EffectiveDate" xml:space="preserve">
         <value>[en-GB] Effective Date</value>
     </data>
+    <data name="GridTitle" xml:space="preserve">
+        <value>[en-GB] Scheduled Adapter Instances</value>
+    </data>
     <data name="IgnoreDeps" xml:space="preserve">
         <value>[en-GB] Ignore Deps</value>
     </data>
