--- a/MetraControl/ScheduledAdapters/App_LocalResources/ScheduledAdaptersInstanceList.aspx.es-MX.resx
+++ b/MetraControl/ScheduledAdapters/App_LocalResources/ScheduledAdaptersInstanceList.aspx.es-MX.resx
@@ -116,6 +116,9 @@
     <data name="EffectiveDate" xml:space="preserve">
         <value>[es-mx] Effective Date</value>
     </data>
+    <data name="GridTitle" xml:space="preserve">
+        <value>[es-MX] Scheduled Adapter Instances</value>
+    </data>
     <data name="IgnoreDeps" xml:space="preserve">
         <value>[es-mx] Ignore Deps</value>
     </data>
