--- a/MetraControl/ScheduledAdapters/App_LocalResources/ScheduledAdaptersInstanceList.aspx.es.resx
+++ b/MetraControl/ScheduledAdapters/App_LocalResources/ScheduledAdaptersInstanceList.aspx.es.resx
@@ -116,6 +116,9 @@
     <data name="EffectiveDate" xml:space="preserve">
         <value>[ES] Effective Date</value>
     </data>
+    <data name="GridTitle" xml:space="preserve">
+        <value>[ES] Scheduled Adapter Instances</value>
+    </data>
     <data name="IgnoreDeps" xml:space="preserve">
         <value>[ES] Ignore Deps</value>
     </data>
