--- a/MetraControl/ScheduledAdapters/App_LocalResources/ScheduledAdaptersInstanceList.aspx.fr.resx
+++ b/MetraControl/ScheduledAdapters/App_LocalResources/ScheduledAdaptersInstanceList.aspx.fr.resx
@@ -116,6 +116,9 @@
     <data name="EffectiveDate" xml:space="preserve">
         <value>[FR] Effective Date</value>
     </data>
+    <data name="GridTitle" xml:space="preserve">
+        <value>[FR] Scheduled Adapter Instances</value>
+    </data>
     <data name="IgnoreDeps" xml:space="preserve">
         <value>[FR] Ignore Deps</value>
     </data>
