--- a/MetraControl/ScheduledAdapters/App_LocalResources/ScheduledAdaptersInstanceList.aspx.resx
+++ b/MetraControl/ScheduledAdapters/App_LocalResources/ScheduledAdaptersInstanceList.aspx.resx
@@ -116,6 +116,9 @@
     <data name="EffectiveDate" xml:space="preserve">
         <value>Effective Date</value>
     </data>
+    <data name="GridTitle" xml:space="preserve">
+        <value>Scheduled Adapter Instances</value>
+    </data>
     <data name="IgnoreDeps" xml:space="preserve">
         <value>Ignore Deps</value>
     </data>
